Fixed button text-spacing.

--- a/style.css
+++ b/style.css
@@ -42,9 +42,9 @@ body #bg {
   height: 100%;
   width: 100%;
   background: url("/assets/canvas-bg.avif") center center;
-  filter: opacity(0.2);
+  opacity: 0.3;
   scale: 2;
-  z-index: -1;
+  z-index: -2;
 }
 
 h1 {
@@ -101,6 +101,9 @@ h3 {
   color: var(--background);
   font-size: 1.8rem;
   transition: transform 200ms, background-color 200ms;
+}
+#settings button {
+  line-height: 3.5rem;
 }
 #settings div:hover,
 #settings button:hover {
